objects/AIA_Benefit_Design_Form__c.object
<CustomObject>
    <fields>
        <fullName>Child_Dependents_of_Domestic_Partner__c</fullName>
        <label>Child Dependents of Domestic Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Dpdt_of_Domestic_Partner_Comms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Dpdt of Domestic Partner Comms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trials__c</fullName>
        <label>Clinical Trials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Continuation_Comments__c</fullName>
        <defaultValue>"Core to fully-insured products. Not applicable to self-insured products."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Continuation Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Continuation__c</fullName>
        <inlineHelpText>DC/VA/MD not COBRA,  Core to fully-insured products</inlineHelpText>
        <label>Continuation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Benefit_Guide_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract/Benefit Guide Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Benefit_Guide__c</fullName>
        <label>Contract/Benefit Guide</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Control Plan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_CBA_Collective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract CBA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Control_Plan__c</fullName>
        <description>Old formula value: Benefit_Design__r.Account__r.Control_Plan__c
Changed as per the story: https://www13.v1host.com/CareFirst/Search.mvc/Advanced?q=3983

Updated the field to reduce the hops, old formula : Text(Benefit_Design__r.Benefit_Request_Form__r.Control_Plan__c)</description>
        <formula>/*Text(Benefit_Design__r.Benefit_Request_Form__r.Control_Plan__c)*/
 Benefit_Design__r.Drawloop_Control_Panel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Control Plan #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customized_Wellness_Services__c</fullName>
        <inlineHelpText>Self Insured only.  Must complete a Health &amp; Wellness Request form (description of services must be included in Additional Nonstandard section below)</inlineHelpText>
        <label>Customized Wellness Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D1q__c</fullName>
        <defaultValue>' Joint mortgage or lease on place of residence;'</defaultValue>
        <description>Joint mortgage or lease on place of residence;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Joint mortgage or lease on place of residence;</inlineHelpText>
        <label>D1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D2q__c</fullName>
        <defaultValue>'Joint title on motor vehicle;'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>D2</label>
        <length>257</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D3__c</fullName>
        <defaultValue>'Agreement establishing joint bank or credit card account;'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>D3</label>
        <length>257</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D4q__c</fullName>
        <defaultValue>'Agreement with a third party lender for joint repayment of indebtedness;'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>D4</label>
        <length>257</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_Wellness_Help_Text__c</fullName>
        <formula>"Effective 1/1/2015; Update: Effective 1/1/2016, Fully Insured accounts must select Integrated DM/Wellness"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM/Wellness Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Finacially_Interdeppendent__c</fullName>
        <label>D, Finacially Interdeppendent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Joint mortgage or lease on place of residence</fullName>
                </value>
                <value>
                    <fullName>Joint title on motor vehicle</fullName>
                </value>
                <value>
                    <fullName>Agreement establishing joint bank or credit card account</fullName>
                </value>
                <value>
                    <fullName>Agreement with a third party lender for joint repayment of indebtedness</fullName>
                </value>
                <value>
                    <fullName>Designation of one partner as the other’s beneficiary with respect to life insurance or retirement benefits</fullName>
                </value>
                <value>
                    <fullName>A joint will, or reciprocal wills in which each partner designates the other as executor or primary beneficiary</fullName>
                </value>
                <value>
                    <fullName>Durable powers of attorney by each partner in favor of the other</fullName>
                </value>
                <value>
                    <fullName>Health care directives or living wills in which each partner gives the other the authority to make health care decisions or</fullName>
                </value>
                <value>
                    <fullName>Other documentation, determined by the Group to be sufficient to establish, under the circumstances of the particular case, that the Subscriber and Domestic Partner are financially interdependent.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Termination__c</fullName>
        <inlineHelpText>Member no longer meets eligibility requirements</inlineHelpText>
        <label>Date of Termination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of the Month when Eligibility Ceases</fullName>
                </value>
                <value>
                    <fullName>Date of Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Spouse_Eligible_Comments_Drwlp__c</fullName>
        <defaultValue>"Includes same sex partner if legally married DC/MD/VA or in another jurisdiction. Fully-insured MD may deselect if the Group has represented that it is either a (i) religious organization, association, or society; or (ii) a nonprofit institution or organization operated, supervised, or controlled by a religious organization, association, or society, and that it qualifies for the exemption described in Section 3 of Maryland Civil Marriage Protection Act (House Bill 438 (2012)). The Group further represents that the same-sex spouse violates its bona fide religious beliefs and practices. Self-insured account may deselect"</defaultValue>
        <description>This field is used by drawloop since we cannot use the Dependent Spouse Eligible Comments field directly</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependent Spouse Eligible Comments Drwlp</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Spouse_Eligible_Comments__c</fullName>
        <defaultValue>"(M) - Includes same sex partner if legally married DC/MD/VA or in another jurisdiction. Fully-insured MD may deselect if the Group has represented that it is either a (i) religious organization, association, or society; or (ii) a nonprofit institution or organization operated, supervised, or controlled by a religious organization, association, or society, and that it qualifies for the exemption described in Section 3 of Maryland Civil Marriage Protection Act (House Bill 438 (2012)). The Group further represents that the same-sex spouse violates its bona fide religious beliefs and practices. Self-insured account may deselect"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependent Spouse Eligible Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent_Spouse_Eligible__c</fullName>
        <inlineHelpText>If marked yes, include Medicare-eligible spouse due to TEFRA/DEFRA.</inlineHelpText>
        <label>Dependent Spouse Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <defaultValue>"Domestic Partnership means a relationship between a Domestic Partner and a Subscriber that satisfies the following requirements.  Answer all that apply."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Admin_Header_Drawloop__c</fullName>
        <defaultValue>"Serving Maryland, the District of Columbia and portions of Virginia, CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. * Davis Vision is an independent company that provides administrative services for vision care to CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. members. Davis Vision is solely responsible for the services it provides. CareFirst of Maryland, Inc., Group Hospitalization and Medical Services, Inc., First Care, Inc., The Dental Network and CareFirst BlueChoice, Inc. are independent licensees of the Blue Cross and Blue Shield Association."+BR()+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ®' Registered trademark of CareFirst of Maryland, Inc"</defaultValue>
        <description>This field hold the disclaim info of Admin output and this should not be on layout</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field hold the disclaim info of Admin output and this should not be on layout</inlineHelpText>
        <label>Disclaim Info In Admin Header Drawloop</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_MCP_N_DPERF_Hdr_Drawlp__c</fullName>
        <defaultValue>"Serving Maryland, the District of Columbia and portions of Virginia, CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst of Maryland, Inc., Group Hospitalization and Medical Services, Inc., First Care, Inc., The Dental Network and CareFirst BlueChoice, Inc. are independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."+BR()+BR()+" "</defaultValue>
        <description>This is the disclaim field which is used for MCP/N-MCP/DPERFOutputs. This field should not be on layout</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the disclaim field which is used for MCP/N-MCP/DPERFOutputs. This field should not be on layout</inlineHelpText>
        <label>Disclaim Info In MCP(N/DPERF) Hdr Drawlp</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Domestic Partner Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner_Commnets__c</fullName>
        <defaultValue>"Note: If domestic partner is selected, complete the separate DOMESTIC PARTNERS EXCEPTION REQUEST FORM."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Domestic Partner Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner_Section_D_HeaderComment__c</fullName>
        <defaultValue>'Financially Interdependent means the parties are jointly responsible for the financial obligations of the domestic partnership.  The Subscriber and Domestic Partner can establish that they are financially interdependent by submitting to the Group the following documents:'</defaultValue>
        <description>https://www13.v1host.com/CareFirst/Search.mvc/Advanced?q=3983</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner__c</fullName>
        <label>Domestic Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Sex Partner</fullName>
                </value>
                <value>
                    <fullName>Opposite Sex Partner</fullName>
                </value>
                <value>
                    <fullName>Same &amp; Opposite Sex Partner</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Same &amp; Opposite Sex</fullName>
                </value>
                <value>
                    <fullName>Same Sex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Partnership_includes__c</fullName>
        <label>A. Domestic Partnership includes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same-sex only</fullName>
                </value>
                <value>
                    <fullName>Same and opposite-sex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drawloop_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Drawloop Product</label>
        <length>85000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drug_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERISA_Status__c</fullName>
        <inlineHelpText>ERISA applies to virtually all private sector employee benefit plans.</inlineHelpText>
        <label>ERISA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Intervention_Services__c</fullName>
        <inlineHelpText>Early Intervention Services (VA-M only)</inlineHelpText>
        <label>Early Intervention Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_New_Hire_Coverage__c</fullName>
        <label>Effective Date of New Hire Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>The date of hire or employment</fullName>
                </value>
                <value>
                    <fullName>The 1st of the month following the date of hire or employment</fullName>
                </value>
                <value>
                    <fullName>The 1st of the month following acceptance of the application by CareFirst</fullName>
                </value>
                <value>
                    <fullName>The 1st or 15th, whichever occurs first of the month following acceptance of the application by CareFirst</fullName>
                </value>
                <value>
                    <fullName>1st of Month after CareFirst Application</fullName>
                </value>
                <value>
                    <fullName>1st of Month after Hire</fullName>
                </value>
                <value>
                    <fullName>1st or 15th after CareFirst Application</fullName>
                </value>
                <value>
                    <fullName>Date of Hire/Employment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_New_Hire_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date of New Hire Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Benefit_Design__r.Implementation__r.Opportunity__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Change_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date of Change Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Change__c</fullName>
        <description>Old formula value: Benefit_Design__r.Last_Modified_Date_only__c
Changed as per the story: https://www13.v1host.com/CareFirst/Search.mvc/Advanced?q=3983

Updated the formula to reduce the hops Old Formula : Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c</description>
        <formula>/*Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c */
 Benefit_Design__r.Drawloop_Effective_date_of_change__c</formula>
        <label>Effective Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type_Drawloop__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Enrollment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Type Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFMI</fullName>
                </value>
                <value>
                    <fullName>GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFBC</fullName>
                </value>
                <value>
                    <fullName>CFBC and GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFBC and CFMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eq__c</fullName>
        <defaultValue>'Will coverage be offered to dependent children of a Domestic Partner?    '</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>E</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Review_Processing_Comments__c</fullName>
        <defaultValue>"Note: Regarding nonfederal governmental accounts: Effective 7/1/11, CareFirst counsel believes nonfederal governmental accounts may be subject to the state external review process, however, accounts should obtain independent legal advice before choosing an external review process."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>External Review Processing Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Review_Processing__c</fullName>
        <label>External Review Processing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CareFirst External Review (IRO verbiage/fees in ASA)</fullName>
                </value>
                <value>
                    <fullName>State External Review (No IRO verbiage/fees in ASA)</fullName>
                </value>
                <value>
                    <fullName>Account External Review (No IRO verbiage/fees in ASA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fall_Prevention_Effective_Date__c</fullName>
        <description>Fall Prevention Effective Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fall Prevention Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Arrangement__c</fullName>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Insured</fullName>
                </value>
                <value>
                    <fullName>Fully-Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstHelp_Comments__c</fullName>
        <defaultValue>"Core to fully-insured products. Self-insured accounts with TCCI Cost Share Waiver/ Plug-In must select yes."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FirstHelp Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstHelp_Number_Comments__c</fullName>
        <defaultValue>"All fully-insured and self-insured accounts with TCCI Cost Share Waiver / Plug-In will have phone number on ID card. Otherwise phone number not included on ID card unless requested."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FirstHelp Number Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstHelp_Number_on_ID_Card__c</fullName>
        <label>FirstHelp Number on ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstHelp__c</fullName>
        <label>FirstHelp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Renewal_Date__c</fullName>
        <formula>Benefit_Design__r.Account__r.Final_Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flexlink_Claims_Processing_FL__c</fullName>
        <formula>IF(text(Benefit_Design__r.Benefit_Request_Form__r.FlexLink_Picklist__c)='Yes','Yes','No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flexlink Claims Processing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flexlink_Claims_Processing__c</fullName>
        <label>Flexlink Claims Processing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>The form type name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The form type name</inlineHelpText>
        <label>Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fq__c</fullName>
        <defaultValue>'Will COBRA coverage be offered to Domestic Partners and, if applicable, the children of Domestic Partners?  '</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>F</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_time_Students_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full-time Students Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_time_Students_Limiting_Age__c</fullName>
        <defaultValue>26</defaultValue>
        <label>Full-time Students Limiting Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_time_Students_Removal_Method__c</fullName>
        <label>Full-time Students Removal Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Calendar Month</fullName>
                </value>
                <value>
                    <fullName>On Birthday</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Arrangement_Drawloop__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Funding_Arrangements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Arrangement Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <inlineHelpText>Please select the funding arrangement for the plans to which this Managed Care form applies.</inlineHelpText>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Anesthesia_for_Dental_care__c</fullName>
        <inlineHelpText>General Anesthesia for Dental care – (MD/VA-M, DC-C)</inlineHelpText>
        <label>General Anesthesia for Dental care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandchildren_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grandchildren Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandchildren_Court_Ordered_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grandchildren – Court Ordered Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grandchildren_Court_Ordered_Custody_Re__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grandchildren – Court Ordered Custody Re</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandchildren_Court_Ordered__c</fullName>
        <inlineHelpText>Grandchildren – Court Ordered Custody Requirement</inlineHelpText>
        <label>Grandchildren – Court Ordered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandchildren_Waiver_Comments__c</fullName>
        <defaultValue>"Applies to fully-insured accounts that provide Dependent coverage. Self-insured accounts may select. For new and renewing fully-insured accounts, the Family Coverage Expansion Act removed the requirement that the grandchild dependent must be in the Court Ordered Custody of the grandparent. Grandchildren dependents shall now follow the Standard Guidelines for Dependent Eligibility."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Grandchildren Waiver Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grandchildren_Waiver__c</fullName>
        <inlineHelpText>Includes waiver of court ordered custody requirement for grandchildren.</inlineHelpText>
        <label>Grandchildren Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>